--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <title>Baby Nellen</title>
         <meta name="description" content="Baby Nellen - May 2022">
         <link rel="stylesheet" href="main.css">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
     </head>
     <body>
         <div class="angry-grid">
@@ -34,7 +35,10 @@
                 <a href="#" class="BUTTON_VMV">Amazon Registry</a>
                 <a href="#" class="BUTTON_VMV">Target Registry</a>
             </div>
-            <div id="item-4">&nbsp;</div>
+            <div id="item-4">
+                <img class="animals" src="screenshots/deer.png">
+                <img class="animals" src="screenshots/bear.png">
+            </div>
         </div>
     </body>
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
