--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
@@ -22,8 +19,7 @@
             <div id="item-0">&nbsp;</div>
             <div id="item-1">
                 <div class="headerName">
-                    <h1>Baby &nbsp</h1>
-                    <span class="h1alt">Nellen</span>
+                    <h1>Baby Nellen</h1>
                 </div>
                 <div class="headerName">
                 <p id="demo"></p>
@@ -32,8 +28,9 @@
             <div id="item-2">
             </div>
             <div id="item-3">
-                <a href="#" class="BUTTON_VMV">Amazon Registry</a>
-                <a href="#" class="BUTTON_VMV">Target Registry</a>
+                <a href="https://www.amazon.com/baby-reg/andrea-nellen-levi-nellen-may-2022-roseville/1L6F2TW45TG8Z" class="BUTTON_VMV">Amazon Registry</a>
+                <a href="https://www.target.com/gift-registry/gift/hellobabynellen" class="BUTTON_VMV">Target Registry</a>
+                <a href="https://forms.gle/i3xNBt6p54BtS2n6A"><p>Place your bets on Baby Nellen!</p></a>
             </div>
             <div id="item-4">
                 <img class="animals" src="screenshots/deer.png">
