updated link and padding

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div id="item-3">
                 <a href="https://www.amazon.com/baby-reg/andrea-nellen-levi-nellen-may-2022-roseville/1L6F2TW45TG8Z" class="BUTTON_VMV">Amazon Registry</a>
                 <a href="https://www.target.com/gift-registry/gift/hellobabynellen" class="BUTTON_VMV">Target Registry</a>
-                <a href="https://forms.gle/i3xNBt6p54BtS2n6A"><p>Place your bets on Baby Nellen!</p></a>
+                <a href="https://forms.gle/i3xNBt6p54BtS2n6A"><p>Place your bets on <br> Baby Nellen!</p></a>
             </div>
             <div id="item-4">
                 <img class="animals" src="screenshots/deer.png">
