--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <div id="item-2">
             </div>
             <div id="item-3">
-                <a href="https://www.amazon.com/baby-reg/andrea-nellen-levi-nellen-may-2022-roseville/1L6F2TW45TG8Z" class="BUTTON_VMV">Amazon Registry</a>
-                <a href="https://www.target.com/gift-registry/gift/hellobabynellen" class="BUTTON_VMV">Target Registry</a>
-                <a href="https://forms.gle/i3xNBt6p54BtS2n6A"><p>Place your bets on <br> Baby Nellen!</p></a>
+                <a href="https://www.amazon.com/baby-reg/andrea-nellen-levi-nellen-may-2022-roseville/1L6F2TW45TG8Z" target="_blank" rel="noopener noreferrer" class="BUTTON_VMV">Amazon Registry</a>
+                <a href="https://www.target.com/gift-registry/gift/hellobabynellen" target="_blank" rel="noopener noreferrer" class="BUTTON_VMV">Target Registry</a>
+                <a href="https://forms.gle/i3xNBt6p54BtS2n6A" target="_blank" rel="noopener noreferrer"><p>Place your bets on Baby Nellen!</p></a>
             </div>
             <div id="item-4">
                 <img class="animals" src="screenshots/deer.png">
