--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <title>Baby Nellen</title>
         <meta name="description" content="Baby Nellen - May 2022">
         <link rel="stylesheet" href="main.css">
+        <link rel="icon" type="image/x-icon" href="/screenshots/favicon.ico">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
     </head>
     <body>
